modals/register/register-style.less
.register-modal h1 {
  font-size: 46px;
  line-height: 50px;
  color: #4c4c4c;
}

.register-form {
  width: 322px;
}

.facebook-login-button {
  margin-left: 80px;
  line-height: 72px;
  color: white;
  text-shadow: 0 -2px 1px rgba(0,0,0,0.4);
  font-size: 20px;
  padding-left: 64px;
  border: none;
  background-color: transparent;
}

.or-divider {
  margin-top:11px;
  margin-bottom:11px;
  text-align: center;
  line-height:36px;
  font-size: 19px;
  color: white;
  text-shadow: 0 1px 1px rgba(0,0,0,0.5);
}

.register-form {
  margin-left: 84px;
}

.register-form .register-field {
  width: 302px;
}

.register-form .half-width-field {
  width: 135px;
}

.half-form-block {
  width: 157px;
}

.half-form-block label {
  font-size: 16px;
}

.password-block {
  float: left;
}

.confirm-password-block {
  float: right;
}

.register-button {
  font-size: 20px;
  color: white;
  font-weight: bold;
  text-shadow: 0 -2px 1px rgba(0,0,0,0.3);
  border: none;
  background-color: transparent;
}

